<resources>
    <string name="app_name">Test Application</string>
    <string name="reset">Reset</string>
    <string name="finish">Finish</string>
    <string name="openGame">Play The Thrilling Card Game!</string>
    <string name="hello_world">Hello World!</string>
    <string name="image_description">Image of a purple-hued galaxy</string>
    <string name="game_name">The Thrilling Card Game</string>
    <string name="open_game_exam">Play the Thrilling Guessing Game!</string>
    <string name="game_name_exam">Guess the University!</string>
    <string name="game_guide">Find the magic card!</string>
    <string name="highscore" translatable="false" />
    <string name="highscoretext">High score: </string>
    <string name="title_activity_bottom_navigation" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_location">Location</string>
    <string name="pickedTimeMin" translatable="false">00</string>
    <string name="pickedTimeSec" translatable="false">00</string>
    <string name="divider" translatable="false"> : </string>
    <string name="dashboard_header">Your coordinates</string>
    <string name="title_timer">Timer</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="mapButton">Show on map</string>
    <string name="addressMissing">Unable to search address</string>
    <string name="setTimer">Set a timer!</string>
    <string name="stopTimer">STOP</string>
    <string name="startTimer">START</string>
    <string name="pauseTimer">PAUSE</string>
    <string name="continueTimer">RESUME</string>
    <string name="startedTimer">RUNNING</string>
    <string name="timerNotRunning">Timer not running</string>
    <string name="timerRunning">"Time remaining: "</string>
    <string name="timerDone">FINISHED!</string>
    <string name="cannotTime">Set a time!</string>
    <string name="title_company_search">Company search</string>
    <string name="searchDescription">Search companies from\nthe YTJ company and association database!\nThe first 30 results are shown</string>
    <string name="searchByName">Search by name</string>
    <string name="searchButton">Search!</string>
    <string name="searching">Searching..</string>
    <string name="inputMissing">Search term missing!</string>
    <string name="resultsFound">Total results</string>
    <string name="totalResults" translatable="false" />
    <string name="forTheWord">for search term </string>
    <string name="uiCompanyId">companyId</string>
    <string name="uiCompanyName">companyName</string>
    <string name="uiCompanyRegistrationDate">companyDate</string>
    <string name="uiCompanyType">companyType</string>
    <string name="searchTitle">Search…</string>
    <string name="searchHint">Filter by name</string>
    <string name="noResults">No results</string>
    <string name="XAMK" translatable="false">XAMK</string>
    <string name="LAUREA" translatable="false">LAUREA</string>
    <string name="LAB" translatable="false">LAB</string>
    <string name="JAMK" translatable="false">JAMK</string>
    <string name="TAMK" translatable="false">TAMK</string>
    <string name="showScore">Show score!</string>
    <string name="correct">Correct!</string>
    <string name="totalScore">Your score was</string>
    <string name="topLeftCard">Top left card</string>
    <string name="topRightCard">Top right card</string>
    <string name="lowerLeftCard">Lower left card</string>
    <string name="lowerRightCard">Lower right card</string>
    <string name="dropDownArrow">Drop down arrow</string>
</resources>